# perspectivism

./: .gitignore  .gitmodules  README.md  build_languages.sh  create-hc-symlinks.sh  default.nix  executorConfig.json  get-languages.js  jest.config.js  main.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  tslint.json
.github/workflows/: release.yml
bootstrap/: mainnetSeed.json  world.perspective.json
bootstrap/QmchPr6NgxFUrrETHrd49DSRdfFMdn6A5sw2JSXhujy4gS/: bundle.js  meta.json
graphics/: Logo.icns
public/: global.css  index.html  splash.css  splash.html
public/images/: splash-background.xcf
scripts/: get-languages.js
sdna/: todo.pl
src/: App.svelte  Config.ts  main.ts
src/acai/: Agent.ts  Expression.ts  ExpressionRef.ts  Language.ts  LanguageContext.ts  LanguageRef.ts  Links.ts  Perspective.ts  README.md
src/ad4m/: Language.ts
src/core/: AgentService.ts  Config.ts  GraphQL.ts  Gun.js  Holochain.ts  LanguageController.ts  LinkLanguageFactory.ts  LinkRepoController.test.ts  LinkRepoController.ts  Perspective.test.ts  Perspective.ts  PerspectiveID.ts  PerspectivesController.ts  PerspectivismCore.ts  Signatures.ts  db.ts
src/languages/languages/hc-dna/: Cargo.toml  build.sh  dna.yaml
src/languages/languages/hc-dna/languages.dna.workdir/: dna.json
src/languages/languages/hc-dna/tests/src/: index.ts
src/languages/languages/hc-dna/zomes/anchored-expression/: Cargo.toml
src/languages/languages/hc-dna/zomes/anchored-expression/src/: lib.rs
src/main-thread/: Agent.js  Agent.ts  AgentService.ts  Config.js  DIDs.ts  GraphQL.js  (+20 more)
(+153 files in other folders)
