[workspace]
members = [
  "zomes/anchored-expression"
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = { git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils" }
hdk3 = { git = "https://github.com/holochain/holochain", branch = "develop", package = "hdk3" }
holo_hash = { git = "https://github.com/holochain/holochain", branch = "develop", package = "holo_hash" }
